--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <div class="col d-grid h-75 mh-100"><button class="btn btn-secondary btn-large border border-none fs-3" style='background:slategray' onclick='calcClick("&minus;")'>&minus;</button></div>
             </div>
             <div class="row justify-content-center align-items-center mb-1 g-2">
-                <div class="col d-grid h-75 mh-100"><button class="btn btn-danger btn-large border border-none fs-3" onclick=''>C</button></div>
+                <div class="col d-grid h-75 mh-100"><button class="btn btn-danger btn-large border border-none fs-3" onclick='clearclick()'>C</button></div>
                 <div class="col d-grid h-75 mh-100"><button class="btn btn-primary btn-large border border-none fs-3" style='background:blue' onclick='numberClick(0)'>0</button></div>
                 <div class="col d-grid h-75 mh-100"><button class="btn btn-success btn-large border border-none fs-3" onclick='equals()'>=</button></div>
                 <div class="col d-grid h-75 mh-100"><button class="btn btn-secondary btn-large border border-none fs-3" style='background:slategray' onclick='calcClick("&plus;")'>&plus;</button></div>
@@ -42,7 +42,7 @@
         </div>
     </div>
 <div>
-    <a href="calculator.py">
+    <a href="py/calculator.py">
         <p class="text-center">click me to download the calculator at python version</p>
     </a>
 </div>
