updata index.html

--- a/index.html
+++ b/index.html
@@ -1,3 +1,19 @@
+<!-- I give up , i can't understand javascript & html -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    
+</body>
+</html>
+
+
+
 <!DOCTYPE html>
 <html>
 <head>     
@@ -34,7 +50,7 @@
                 <div class="col d-grid h-75 mh-100"><button class="btn btn-secondary btn-large border border-none fs-3" style='background:slategray' onclick='calcClick("&minus;")'>&minus;</button></div>
             </div>
             <div class="row justify-content-center align-items-center mb-1 g-2">
-                <div class="col d-grid h-75 mh-100"><button class="btn btn-danger btn-large border border-none fs-3" onclick=''>C</button></div>
+                <div class="col d-grid h-75 mh-100"><button class="btn btn-danger btn-large border border-none fs-3" onclick='clearclick()'>C</button></div>
                 <div class="col d-grid h-75 mh-100"><button class="btn btn-primary btn-large border border-none fs-3" style='background:blue' onclick='numberClick(0)'>0</button></div>
                 <div class="col d-grid h-75 mh-100"><button class="btn btn-success btn-large border border-none fs-3" onclick='equals()'>=</button></div>
                 <div class="col d-grid h-75 mh-100"><button class="btn btn-secondary btn-large border border-none fs-3" style='background:slategray' onclick='calcClick("&plus;")'>&plus;</button></div>
@@ -42,9 +58,13 @@
         </div>
     </div>
 <div>
-    <a href="calculator.py">
+    <a href="py/calculator.py" download="calculator.py">
         <p class="text-center">click me to download the calculator at python version</p>
     </a>
+</div>
+<div>
+    <h1>請不要連按<h1 style="color:crimson;">兩次(包含)以上</h1><nobr><h1>運算符號</h1></h1>
+    <h3>什麼? 你問我原因喔....這沒有原因 就是老子解決不了這個問題!</h3>
 </div>
 </body>
 <script src='calc2.js'></script>
