updata index.html

--- a/index.html
+++ b/index.html
@@ -46,6 +46,10 @@
         <p class="text-center">click me to download the calculator at python version</p>
     </a>
 </div>
+<div>
+    <h1>請不要連按<h1 style="color:crimson;">兩次(包含)以上</h1><h1>運算符號</h1></h1>
+    <h3>什麼? 你問我原因喔....這沒有原因 就是老子解決不了這個問題!</h3>
+</div>
 </body>
 <script src='calc2.js'></script>
 </html>
